test: 로또 묶음 테스트 코드 생성